<resources>
    <string name="app_name">PetCare</string>
    <string name="screen_welcome">Welcome</string>
    <string name="screen_login">Login</string>
    <string name="screen_signup">Sign Up</string>
    <string name="screen_pet_list">My Pets</string>
    <string name="pet_list_eyebrow">YOUR CARE SPACE</string>
    <string name="pet_list_intro">Every profile and daily routine, together in one place.</string>
    <string name="empty_pets_eyebrow">LET’S GET STARTED</string>
    <string name="pet_form_eyebrow">PET PROFILE</string>
    <string name="pet_form_intro">The details that help you care for them.</string>
    <string name="task_form_eyebrow">CARE ROUTINE</string>
    <string name="task_form_intro">Make the everyday easier to remember.</string>
    <string name="screen_pet_form">Pet Profile</string>
    <string name="screen_pet_checklist">Daily Checklist</string>
    <string name="screen_task_form">Care Task</string>
    <string name="screen_delegate">Delegate Checklist</string>
    <string name="welcome_tagline">Every pet. Every task. Never missed.</string>
    <string name="btn_login">Log In</string>
    <string name="btn_signup">Sign Up</string>
    <string name="cd_btn_login">Log in to your existing account</string>
    <string name="cd_btn_signup">Sign up for a new account</string>
    <string name="title_signup">Create an Account</string>
    <string name="subtitle_signup">Sign up to track and manage care for your pets</string>
    <string name="title_login">Welcome Back</string>
    <string name="subtitle_login">Log in to view your daily care routines</string>
    <string name="email_label">Email Address</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="remember_me">Remember me</string>
    <string name="already_have_account">Already have an account? Log In</string>
    <string name="dont_have_account">Don’t have an account? Sign Up</string>
    <string name="btn_create_account">Create Account</string>
    <string name="signup_success">Account created successfully</string>
    <string name="login_success">Logged in successfully</string>
    <string name="error_email_required">Email address is required</string>
    <string name="error_email_invalid">Please enter a valid email address</string>
    <string name="error_email_duplicate">An account with this email already exists</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_length">Password must be at least 8 characters</string>
    <string name="error_password_complexity">Password must contain at least one letter and one digit</string>
    <string name="error_password_confirm_required">Please confirm your password</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="error_invalid_credentials">Incorrect email or password</string>
    <string name="action_logout">Log Out</string>
    <string name="dialog_logout_title">Log Out?</string>
    <string name="dialog_logout_message">Are you sure you want to log out of PetCare?</string>
    <string name="dialog_logout_confirm">Log Out</string>
    <string name="dialog_logout_cancel">Cancel</string>
    <string name="title_add_pet">Add Pet</string>
    <string name="title_edit_pet">Edit Pet</string>
    <string name="btn_add_pet">Add Pet</string>
    <string name="btn_save_changes">Save Changes</string>
    <string name="pet_added_success">Pet added successfully</string>
    <string name="pet_updated_success">Pet updated successfully</string>
    <string name="empty_pets_title">No pets yet!</string>
    <string name="empty_pets_subtitle">Add your furry, scaly, or feathered friend to begin tracking their daily care routines.</string>
    <string name="dialog_delete_pet_title">Delete %1$s?</string>
    <string name="dialog_delete_pet_message">This will permanently remove %1$s and all of their scheduled care tasks.</string>
    <string name="btn_delete">Delete</string>
    <string name="snackbar_pet_deleted">%1$s deleted successfully</string>
    <string name="action_undo">Undo</string>
    <string name="dialog_unsaved_title">Discard Changes?</string>
    <string name="dialog_unsaved_message">You have unsaved changes. Are you sure you want to discard them?</string>
    <string name="btn_discard">Discard</string>
    <string name="btn_keep_editing">Keep Editing</string>
    <string name="dialog_photo_source_title">Pet Photo</string>
    <string name="action_take_photo">Take Photo</string>
    <string name="action_choose_gallery">Choose from Gallery</string>
    <string name="action_remove_photo">Remove Photo</string>
    <string name="pet_photo_helper">Tap to add photo</string>
    <string name="pet_name_label">Pet Name *</string>
    <string name="species_label">Species *</string>
    <string name="breed_label">Breed</string>
    <string name="age_label">Age (years)</string>
    <string name="weight_label">Weight (kg)</string>
    <string name="diet_label">Dietary Preferences</string>
    <string name="allergies_label">Allergies &amp; Sensitivities</string>
    <string name="vaccinations_label">Vaccination History</string>
    <string name="favourite_toys_label">Favourite Toys</string>
    <string name="notes_label">Care Notes</string>
    <string name="age_format_years">%1$s years old</string>
    <string name="age_format_one_year">1 year old</string>
    <string name="error_name_required">Pet name is required</string>
    <string name="error_species_required">Please select or enter a species</string>
    <string name="error_age_invalid">Age must be between 0 and 40 years</string>
    <string name="error_weight_invalid">Weight must be between 0.1 and 150 kg</string>
    <string name="cd_pet_photo">Pet photo</string>
    <string name="cd_change_photo_badge">Change pet photo</string>
    <string name="cd_app_logo">PetCare logo</string>
    <string name="cd_more_options">More options</string>
    <string name="cd_navigate_up">Navigate up</string>
    <string name="cd_no_pets">No pets illustration</string>
    <string name="cd_field_name">Pet name field</string>
    <string name="cd_field_species">Pet species field</string>
    <string name="cd_field_breed">Pet breed field</string>
    <string name="cd_field_diet">Dietary preferences field</string>
    <string name="cd_field_allergies">Allergies field</string>
    <string name="cd_field_vaccinations">Vaccinations field</string>
    <string name="cd_field_toys">Favourite toys field</string>
    <string name="cd_field_notes">Care notes field</string>
    <string name="action_add_pet">Add Pet</string>
    <string name="btn_save_pet">Save pet</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_change_photo">Change Photo</string>
    <string name="section_basic_information">Basic information</string>
    <string name="section_health_and_care">Health and care</string>
    <string name="section_extras">Extras</string>
    <string name="suffix_years">years</string>
    <string name="suffix_kg">kg</string>
    <string name="hint_pet_name">Pet Name *</string>
    <string name="hint_species">Species *</string>
    <string name="hint_breed">Breed</string>
    <string name="hint_age">Age</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_diet">Dietary Preferences</string>
    <string name="hint_allergies">Allergies &amp; Sensitivities</string>
    <string name="hint_vaccinations">Vaccination History</string>
    <string name="hint_favourite_toys">Favourite Toys</string>
    <string name="hint_notes">Care Notes</string>
    <string name="helper_required">Required</string>
    <string-array name="species_options">
        <item>Dog</item>
        <item>Cat</item>
        <item>Rabbit</item>
        <item>Bird</item>
        <item>Fish</item>
        <item>Reptile</item>
        <item>Hamster</item>
        <item>Guinea Pig</item>
        <item>Other</item>
    </string-array>
    <string name="title_add_task">Add Care Routine</string>
    <string name="title_edit_task">Edit Care Routine</string>
    <string name="action_add_task">Add Routine</string>
    <string name="action_save_task">Save Routine</string>
    <string name="action_add_routine">Add routine</string>
    <string name="btn_save_routine">Save routine</string>
    <string name="section_who_and_what">Who and what</string>
    <string name="section_when">When</string>
    <string name="section_details">Details</string>
    <string name="section_basic_info">Basic Information</string>
    <string name="section_health_care">Health &amp; Care</string>
    <string name="section_additional_details">Additional Details</string>
    <string name="reminder_title">Reminder</string>
    <string name="reminder_subtitle">Notify me at the set time</string>
    <string name="label_select_pet">Pet *</string>
    <string name="hint_task_name">Routine name *</string>
    <string name="hint_category">Category *</string>
    <string name="hint_frequency">Frequency *</string>
    <string name="hint_time">Time *</string>
    <string name="hint_supplies">Required Supplies</string>
    <string name="hint_task_notes">Notes</string>
    <string name="hint_notes_healthcare">Clinic, address, appointment details</string>
    <string name="label_reminder_switch">Remind me at this time</string>
    <string name="frequency_daily">Daily</string>
    <string name="frequency_weekly">Weekly</string>
    <string name="chip_mon">Mon</string>
    <string name="chip_tue">Tue</string>
    <string name="chip_wed">Wed</string>
    <string name="chip_thu">Thu</string>
    <string name="chip_fri">Fri</string>
    <string name="chip_sat">Sat</string>
    <string name="chip_sun">Sun</string>
    <string name="days_of_week_label">Repeat on *</string>
    <string name="no_pets_warning">No pets found! You must add a pet before creating a care routine.</string>
    <string name="btn_create_pet">Add Pet First</string>
    <string name="snackbar_task_saved">Care routine saved</string>
    <string name="routine_added_success">Care routine added successfully</string>
    <string name="routine_updated_success">Care routine updated successfully</string>
    <string name="error_task_name_required">Routine name is required</string>
    <string name="error_pet_required">Please select a pet</string>
    <string name="menu_delegate">Delegate</string>
    <string name="menu_reset_checklist">Reset today\'s checklist</string>
    <string name="menu_gestures_guide">Gestures guide</string>
    <string name="screen_admin_user_detail">User pets</string>
    <string name="menu_admin_panel">Admin Panel</string>
    <string name="admin_account_eyebrow">ACCOUNT PROFILE</string>
    <string name="admin_account_loading">Loading account…</string>
    <string name="admin_account_subtitle">Pets and routines linked to this account</string>
    <string name="admin_no_pets">This user has no pets.</string>
    <string name="action_back">Back</string>
    <string name="admin_section_pets">Pets</string>
    <string name="profile_title">My profile</string>
    <string name="profile_photo_description">Profile photo</string>
    <string name="profile_change_photo">Change photo</string>
    <string name="profile_remove_photo">Remove photo</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_email_hint">Your email cannot be changed here</string>
    <string name="profile_save">Save profile</string>
    <string name="profile_password_heading">Change password</string>
    <string name="profile_current_password">Current password</string>
    <string name="profile_new_password">New password</string>
    <string name="profile_confirm_password">Confirm new password</string>
    <string name="profile_change_password">Update password</string>
</resources>